# AxesOfSymmetry

./: CMakeLists.txt  README.md  input2.txt  input3.txt
src/: CMakeLists.txt
src/symmetry/: CMakeLists.txt  main.cpp  matrix.cpp  symmetry.cpp
src/symmetry/include/symmetry/: matrix.h  symmetry.h
tests/: CMakeLists.txt  symmetry_test.cpp
